Image overlap fix on about page

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -240,6 +240,10 @@
         text-align: center;
       }
 
+      .text-area {
+        padding: 6rem 16px 6rem 16px;
+      }
+
       #p3 {
         margin-right: auto;
         width: 100%;
@@ -253,7 +257,7 @@
       }
 
       #education {
-        width: 50%;
+        width: 45%;
       }
     }
   }
